--- a/Web/views/pages/maintainer-bot-lists.ejs
+++ b/Web/views/pages/maintainer-bot-lists.ejs
@@ -22,7 +22,7 @@
 						<div class="message-body">
 							<div class="content">
 								Connect to bot listing services to automatically post stats and receive vote notifications. Supported services:
-								<strong>top.gg</strong>, <strong>Discord Bot List</strong>, <strong>Discord Bots GG</strong>, <strong>DiscordList.gg</strong>, and <strong>Bots on Discord</strong>.
+								<strong>top.gg</strong>, <strong>Discord Bot List</strong>, <strong>Discord Bots GG</strong>, <strong>DiscordList.gg</strong>, <strong>Bots on Discord</strong>, and <strong>TopBotList</strong>.
 							</div>
 						</div>
 					</article>
@@ -51,6 +51,12 @@
                     <div class="notification is-warning is-light">
                         <p class="heading">Discord Bot List Votes</p>
                         <p class="title"><%= configData.voteStats?.discordbotlist || 0 %></p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="notification is-link is-light">
+                        <p class="heading">TopBotList Votes</p>
+                        <p class="title"><%= configData.voteStats?.topbotlist || 0 %></p>
                     </div>
                 </div>
             </div>
@@ -283,6 +289,64 @@
             </div>
         </div>
 
+        <!-- TopBotList Configuration -->
+        <div class="box">
+            <h5 class="title is-5">
+                <span class="icon"><i class="fa fa-trophy"></i></span>
+                TopBotList Integration
+            </h5>
+            
+            <div class="field">
+                <div class="control">
+                    <label class="checkbox">
+                        <input type="checkbox" name="topbotlist_enabled" <%= configData.bot_lists?.topbotlist?.isEnabled ? 'checked' : '' %>>
+                        Enable TopBotList integration
+                    </label>
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">API Token</label>
+                <div class="control has-icons-left">
+                    <input class="input" type="password" name="topbotlist_api_token" value="<%= configData.bot_lists?.topbotlist?.api_token || '' %>" placeholder="Your TopBotList API token">
+                    <span class="icon is-small is-left">
+                        <i class="fa fa-key"></i>
+                    </span>
+                </div>
+                <p class="help">Generate your token in your <a href="https://topbotlist.net/dashboard" target="_blank">TopBotList Dashboard</a></p>
+            </div>
+
+            <div class="field">
+                <label class="label">Webhook Secret</label>
+                <div class="control has-icons-left">
+                    <input class="input" type="password" name="topbotlist_webhook_secret" value="<%= configData.bot_lists?.topbotlist?.webhook_secret || '' %>" placeholder="Webhook authorization secret">
+                    <span class="icon is-small is-left">
+                        <i class="fa fa-shield-alt"></i>
+                    </span>
+                </div>
+                <p class="help">Set this same value in TopBotList webhook settings. Webhook URL: <code><%= configData.hostingURL %>/webhooks/topbotlist</code></p>
+            </div>
+
+            <div class="field">
+                <div class="control">
+                    <label class="checkbox">
+                        <input type="checkbox" name="topbotlist_auto_post" <%= configData.bot_lists?.topbotlist?.auto_post_stats !== false ? 'checked' : '' %>>
+                        Auto-post server stats every 30 minutes
+                    </label>
+                </div>
+            </div>
+
+            <div class="field">
+                <div class="control">
+                    <label class="checkbox">
+                        <input type="checkbox" name="topbotlist_sync_commands" <%= configData.bot_lists?.topbotlist?.sync_commands ? 'checked' : '' %>>
+                        Sync slash commands on startup
+                    </label>
+                </div>
+                <p class="help">Automatically post your bot's slash commands to topbotlist.net when the bot starts</p>
+            </div>
+        </div>
+
         <!-- Vote Rewards Configuration -->
         <div class="box">
             <h5 class="title is-5">
@@ -442,8 +506,10 @@
                         <tr>
                             <td><%= vote.username || vote.user_id %></td>
                             <td>
-                                <span class="tag <%= vote.site === 'topgg' ? 'is-success' : 'is-warning' %>">
-                                    <%= vote.site === 'topgg' ? 'top.gg' : 'Discord Bot List' %>
+                                <% const siteLabels = { topgg: 'top.gg', discordbotlist: 'Discord Bot List', topbotlist: 'TopBotList' }; %>
+                                <% const siteColors = { topgg: 'is-success', discordbotlist: 'is-warning', topbotlist: 'is-link' }; %>
+                                <span class="tag <%= siteColors[vote.site] || 'is-light' %>">
+                                    <%= siteLabels[vote.site] || vote.site %>
                                 </span>
                                 <% if (vote.is_weekend) { %>
                                 <span class="tag is-info">Weekend</span>
