--- a/Web/views/pages/maintainer-wiki-contributors.ejs
+++ b/Web/views/pages/maintainer-wiki-contributors.ejs
@@ -85,7 +85,7 @@
 														<%= configData.wiki_contributors[i].id %>
 													</td>
 													<td>
-														<button class="button is-small is-danger" name="contributor-removed" value="<%= configData.wiki_contributors[i].id %>" onclick="SkynetData.HUM = true;"<% if(pageData.showRemove && configData.wiki_contributors[i].isMaintainer) { %> disabled<% } %>>
+														<button class="button is-small is-danger" name="contributor-removed" value="<%= configData.wiki_contributors[i].id %>"<% if(pageData.showRemove && configData.wiki_contributors[i].isMaintainer) { %> disabled<% } %>>
 															<span>Remove</span>
 															<span class="icon is-small">
 																<i class="fa fa-times"></i>
@@ -120,7 +120,7 @@
 										<input id="new-contributor-user" class="input is-primary user-autocomplete" type="text" placeholder="Username or ID" onkeypress="return event.keyCode !== 13;">
 									</div>
 									<div class="control">
-										<a class="button is-primary" onclick="newWikiContributors();">
+										<a class="button is-primary" id="new-wiki-contributor-btn">
 											<span class="icon">
 										        <i class="fa fa-plus"></i>
 										    </span>
