chore: various bug fixes and configuration updates
- Fix AI image feature name (ai_image -> ai_images) in avatar, image, and variations commands
- Add null safety checks in SkynetBot.js for messageDelete event handler
- Filter null servers in activity controller from failed guild fetches
- Update monitoring configurations (docker-compose, grafana, prometheus)

--- a/Web/views/pages/maintainer-donations.ejs
+++ b/Web/views/pages/maintainer-donations.ejs
@@ -82,7 +82,7 @@
 		SkynetData.HUM = true;
 	});
 
-	$('#add-charity-btn').on('click', function() {
+	$(document).on('click', '.add-charity-btn', function() {
 		$('#charities-table tbody').append(`
 			<tr>
 				<td><input class="input" type="text" name="name[]" value="" required></td>
